[gd_scene load_steps=11 format=3 uid="uid://cclx3m5jthhu"]

[ext_resource type="Script" path="res://Scenes/Inimigo/Inimigo.gd" id="1_opyav"]
[ext_resource type="Texture2D" uid="uid://pyxcosi477dw" path="res://Assets/Enemy/inimigoUnity.png" id="2_xcgx2"]
[ext_resource type="PackedScene" uid="uid://ffww53b7obbo" path="res://Scripts/Vida/VidaComponent.tscn" id="3_4n324"]
[ext_resource type="PackedScene" uid="uid://cjlo0jr3yrwvm" path="res://Scripts/Hitbox/HitboxComponent.tscn" id="4_cgaxt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nvxtd"]
atlas = ExtResource("2_xcgx2")
region = Rect2(82, 0, 41, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_55dcq"]
atlas = ExtResource("2_xcgx2")
region = Rect2(41, 0, 41, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyml8"]
atlas = ExtResource("2_xcgx2")
region = Rect2(0, 0, 41, 35)

[sub_resource type="SpriteFrames" id="SpriteFrames_73nm1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvxtd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55dcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyml8")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ac3vd"]
radius = 22.0
height = 44.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_prtfw"]
radius = 17.0
height = 36.0

[node name="Inimigo" type="RigidBody2D" node_paths=PackedStringArray("vida_component", "hitbox_component")]
collision_mask = 0
gravity_scale = 0.0
script = ExtResource("1_opyav")
vida_component = NodePath("VidaComponent")
hitbox_component = NodePath("HitboxComponent")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -18)
sprite_frames = SubResource("SpriteFrames_73nm1")
frame_progress = 0.237292

[node name="VidaComponent" parent="." instance=ExtResource("3_4n324")]
position = Vector2(0, -18)

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("vida_component") instance=ExtResource("4_cgaxt")]
position = Vector2(-2, -18)
vida_component = NodePath("../VidaComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CapsuleShape2D_ac3vd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = -1
position = Vector2(-2, -18)
shape = SubResource("CapsuleShape2D_prtfw")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-2, -18)
scale = Vector2(1.9, 1.8)

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
